@@ -172,6 +172,7 @@ Version 0.1 Initial release
 		%	06/21/2017 fixed syntax issues
 		%	06/23/2017 fixed multitude of issues with Tgml file reading and validation
 		%	06/26/2017 fixed various issues with set_exposed_properties()
+		%	06/26/2017 changed fix_scripts() to fix_cdata() and added Text / TextBox to be corrected
 	#Translate
 		+	06/07/2017 class added
 		%	06/09/2017 __init__() changed for proper inheritance
